adding searching by query

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -19,6 +19,8 @@
   </form>
   {{#each cubes}}
     {{>cube}}
+  {{else}}
+  <p>There are no cubes for your criteria. Why don't you add one?</p>
   {{/each}}
 
 </main>
