show cubes and accessories on attach page

--- a/src/views/accessory/createAccessory.hbs
+++ b/src/views/accessory/createAccessory.hbs
@@ -6,7 +6,7 @@
       <input type="text" id="name" name="name" />
       <label for="name">Description</label>
       <textarea id="description" name="description"></textarea>
-      <label for="image">ImageUrl</label>
+      <label for="image">Image URL</label>
       <input type="text" id="image" name="imageUrl" />
       <input type="submit" value="Create" />
     </form>
